# SmartMate

./: AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md
src/app/: AppBootstrapper.cpp  AppBootstrapper.h  ApplicationRuntime.cpp  ApplicationRuntime.h  CMakeLists.txt  main.cpp  main_widgets.cpp
src/model/: CMakeLists.txt
src/model/dependencies/: TaskDependencyGraph.cpp  TaskDependencyGraph.h
src/model/domain/: AppearanceSettings.cpp  AppearanceSettings.h  DesktopPetSettings.cpp  DesktopPetSettings.h  Task.cpp  Task.h  TaskActivityEvent.h  TaskCategory.cpp  TaskCategory.h  TaskCommandAvailability.h  TaskConstraints.h  TaskCreationRequest.h  TaskDependency.h  TaskDependencyEditContext.h  TaskGraph.h  TaskStateMachine.cpp  TaskStateMachine.h  TaskTypes.h
src/model/persistence/: CMakeLists.txt  QSettingsAppearanceRepository.cpp  QSettingsAppearanceRepository.h  QSettingsDesktopPetRepository.cpp  QSettingsDesktopPetRepository.h  SqliteTaskRepository.cpp  SqliteTaskRepository.h  SqliteTaskRepositoryAtomicCommands.cpp  SqliteTaskRepositoryCategories.cpp  SqliteTaskRepositoryDependencies.cpp  SqliteTaskRepositoryEvents.cpp  SqliteTaskRepositoryTasks.cpp  TaskSqlCodec.cpp  TaskSqlCodec.h
src/model/persistence/internal/: SqliteTaskRepositorySupport.cpp  SqliteTaskRepositorySupport.h
src/model/planner/: TaskCommandPolicy.cpp  TaskOrderingPolicy.cpp  TaskOrderingPolicy.h
src/model/repositories/: IAppearanceSettingsRepository.h  IDesktopPetSettingsRepository.h  ITaskActivityRepository.h  ITaskBatchTransitionRepository.h  ITaskCategoryRepository.h  ITaskCreationRepository.h  ITaskDeletionRepository.h  ITaskRepository.h  ITaskTransitionRepository.h
src/model/services/: AppearanceSettingsService.cpp  AppearanceSettingsService.h  DesktopPetSettingsService.cpp  DesktopPetSettingsService.h  StatisticsService.cpp  StatisticsService.h  TaskCategoryResult.h  TaskCategoryService.cpp  TaskCategoryService.h  TaskResult.h  TaskService.cpp  TaskService.h  TaskServiceDependencyCommands.cpp  TaskServiceDraftCommands.cpp  TaskServiceQueries.cpp  TaskServiceSupport.h  TaskServiceTransitionCommands.cpp
src/model/services/internal/: TaskServiceResultSupport.cpp  TaskServiceResultSupport.h  TaskServiceSnapshotSupport.cpp  TaskServiceSnapshotSupport.h
src/model/statistics/: StatisticsTypes.h
src/view/: CMakeLists.txt
src/view/qml/: AppearanceTheme.qml  DateTimePickerDialog.qml  DependencyGraphNode.qml  DependencyGraphPage.qml  DurationPickerDialog.qml  Main.qml  SettingsPage.qml  TaskCard.qml  TaskCategoryDialog.qml  TaskCreationPredecessorDialog.qml  TaskDependencyDialog.qml  TaskDetailsDialog.qml  TaskEditorDialog.qml  TaskFilterBar.qml  TaskFocusCard.qml  TaskPage.qml
src/view/widgets/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindowDependencies.h
src/view/widgets/focus/: FocusPage.cpp  FocusPage.h
src/view/widgets/graph/: DependencyGraphPage.cpp  DependencyGraphPage.h  DependencyGraphToolbar.cpp  DependencyGraphToolbar.h  DependencyGraphView.cpp  DependencyGraphView.h  TaskGraphDetailsPanel.cpp  TaskGraphDetailsPanel.h  TaskGraphItems.cpp  TaskGraphItems.h
src/view/widgets/pet/: AttachedDesktopPetWindow.cpp  AttachedDesktopPetWindow.h  DesktopPetGeometry.cpp  DesktopPetGeometry.h  DesktopPetSpriteWidget.cpp  DesktopPetSpriteWidget.h  DesktopPetTaskPopup.cpp  DesktopPetTaskPopup.h  FloatingDesktopPetWindow.cpp  FloatingDesktopPetWindow.h
src/view/widgets/settings/: SettingsPage.cpp  SettingsPage.h
src/view/widgets/task/: DeadlinePickerDialog.h  (+22 more)
src/viewmodel/: AppViewModel.cpp  AppViewModel.h  AppearanceSettingsViewModel.cpp  AppearanceSettingsViewModel.h  CMakeLists.txt  DesktopPetSettingsViewModel.cpp  DesktopPetSettingsViewModel.h  StatisticsProjectionModels.cpp  StatisticsProjectionModels.h  StatisticsViewModel.cpp  StatisticsViewModel.h  TaskCategoryPresentation.cpp  TaskCategoryPresentation.h  TaskCategoryViewModel.cpp  TaskCategoryViewModel.h  TaskDependencyViewModel.cpp  TaskDependencyViewModel.h  TaskDetailsViewModel.cpp  TaskDetailsViewModel.h  TaskEditorViewModel.cpp  TaskEditorViewModel.h  TaskErrorMapper.cpp  TaskErrorMapper.h  TaskFocusViewModel.cpp  TaskFocusViewModel.h  TaskGraphInteraction.cpp  TaskGraphProjection.cpp  TaskGraphProjectionModels.h  TaskGraphViewModel.cpp  TaskGraphViewModel.h  TaskListViewModel.cpp  TaskListViewModel.h  TaskProjectionSources.cpp  TaskProjectionSources.h
src/viewmodel/contracts/: CMakeLists.txt  DesktopPetSettingsContract.h  StatisticsContract.h  TaskFocusContract.h  TaskGraphContract.h  ViewModelContracts.cpp
tests/: CMakeLists.txt
tests/architecture/: check_mvvm_boundaries.cmake
tests/fakes/: FakeAppearanceSettingsRepository.h  FakeDesktopPetSettingsRepository.h  FakeTaskActivityRepository.h  FakeTaskBatchTransitionRepository.h  FakeTaskCategoryRepository.h  FakeTaskCreationRepository.h  FakeTaskDeletionRepository.h  FakeTaskDependencyRepository.h  FakeTaskRepository.h
tests/integration/: tst_TaskCreationFlow.cpp  tst_WidgetsDesktopPetFlow.cpp  tst_WidgetsFocusFlow.cpp  tst_WidgetsGraphFlow.cpp  tst_WidgetsStatisticsFlow.cpp
tests/model/: tst_DesktopPetSettingsService.cpp  tst_StatisticsService.cpp  tst_TaskCategoryService.cpp  tst_TaskCategoryTaskService.cpp  tst_TaskOrderingPolicy.cpp  tst_TaskService.cpp  tst_TaskStateTransitions.cpp
tests/persistence/: tst_QSettingsAppearanceRepository.cpp  tst_QSettingsDesktopPetRepository.cpp  tst_SqliteTaskRepository.cpp
tests/qml/: quicktest_main.cpp  tst_PickerDialogs.qml  tst_TaskListControls.qml
tests/qml_graph/: quicktest_main.cpp  tst_DependencyGraph.qml
tests/viewmodel/: tst_AppearanceSettings.cpp  tst_DesktopPetSettingsViewModel.cpp  tst_StatisticsViewModel.cpp  tst_TaskCategoryViewModels.inc  tst_TaskDependencyViewModel.inc  tst_TaskEditorViewModel.inc  tst_TaskGraphViewModel.inc  tst_TaskListViewModel.inc  tst_TaskProjectionSources.cpp  tst_TaskViewModels.cpp  tst_ViewModelContracts.cpp
tests/widgets/: tst_DesktopPetWidgets.cpp  tst_FocusWidgets.cpp  tst_GraphWidgets.cpp  tst_SettingsWidgets.cpp  tst_StatisticsWidgets.cpp  tst_TaskWidgets.cpp
(+11 files in other folders)
